--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -6,5 +6,5 @@ ENV TERM=xterm
 
 RUN yum -y update \
 		&& yum -y install epel-release \
-		&& yum -y install ansible which tar lsof git rsyslog\
+		&& yum -y install ansible which tar lsof wget git rsyslog\
 		&& yum clean all
